--- a/index.html
+++ b/index.html
@@ -4,76 +4,38 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	
-	<title>Jan Kowalski - Portfolio</title>
+	<title>Michał Gulczyński - Portfolio</title>
 	
-	<meta name="description" content="Stworzę dla Ciebie wyjątkową stronę www! Zatrudnij programistę webowego: PHP, JavaScript, HTML, CSS, MySQL, WordPress, Joomla, Drupal." />
-	<meta name="keywords" content="zamów, stronę, tworzenie, www, programista, portfolio, php, javascript, html, css, WordPress, Joomla, Drupal" />
+	<meta name="description" content="Portfolio Michał Gulczyński />
+	<meta name="keywords" content="Unity, Python, Game Dev, Games" />
 	
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" href="css/fontello.css" type="text/css" />
 	<link href='http://fonts.googleapis.com/css?family=Lato|Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	
-	<script src="timer.js"></script>
 		
 </head>
 
-<body onload="odliczanie();">
+<body>
+	    <!-- ******HEADER****** -->
+		<header class="header">
+			<div class="container">
+				<img class="profile-image img-responsive pull-left" src="assets/images/profile.jpg" alt="Michał Gulczyński" />
+				<div class="profile-content pull-left">
+					<h1 class="name">Michał Gulczyński</h1>
+					<h2 class="desc">Programista Unity / Python</h2>
+					<ul class="social list-inline">
+						<!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
+						<!-- <li><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
+						<li><a href="https://www.linkedin.com/in/micha%C5%82-gulczy%C5%84ski-05b04a14a/"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="https://github.com/MichalGul"><i class="fa fa-github-alt"></i></a></li>
+						<!-- <li class="last-item"><a href="#"><i class="fa fa-hacker-news"></i></a></li> -->
+					</ul>
+				</div><!--//profile-->
+				<a class="btn btn-cta-primary pull-right" href="mailto:kamil.roszak98@gmail.com"><i class="fa fa-paper-plane"></i> Napisz do mnie</a>
+			</div><!--//container-->
+		</header><!--//header-->
 	
-	<div id="container">
-	
-		<div class="rectangle">
-			<div id="logo"><a href="zatrudnij-programiste-webowego" class="tilelinkhtml5">Jan Kowalski</a></div>
-			<div id="zegar">12:00:00</div>
-			<div style="clear: both;"></div>
-		</div>
-		
-		<div class="square">
-			<div class="tile1">
-				<a href="kim-jestem" class="tilelink"><i class="icon-user"></i><br />Kim jestem?</a>
-			</div>
-			<a href="oferta-tworzenie-stron-www" class="tilelinkhtml5">
-				<div class="tile1">
-					<i class="icon-laptop"></i><br />Co oferuję?
-				</div>
-			</a>
-			<div style="clear:both;"></div>
-			
-			<div class="tile2">
-				<a href="cv-programista-php-javascript" class="tilelink"><i class="icon-graduation-cap"></i><br />Curriculum vitae</a>
-			</div>
-			<div class="tile3">
-				<a href="kontakt-programista-php" class="tilelink"><i class="icon-mail"></i><br />Kontakt ze mną</a>
-			</div>
-			<div style="clear:both;"></div>
-			
-			<div class="tile4">
-				<i>Talk is cheap. Show me the code!</i><br />- Linus Torvalds, twórca Linuxa
-			</div>
-		</div>
-		<div class="square">
-			<div class="tile5">
-				Witaj w moim portfolio!<br /><br />
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pulvinar ipsum mauris, ac elementum felis convallis non. Duis aliquam felis vel dignissim tincidunt. In tellus mauris, tempor rutrum blandit in, efficitur ac quam. Mauris eu orci scelerisque, placerat eros id, condimentum justo. Suspendisse ac mattis orci, at mollis orci. 
-			</div>
-			<div class="yt">
-				<a href="http://youtube.com" target="_blank" class="sociallink"><i class="icon-youtube"></i></a>
-			</div>
-			<div class="fb">
-				<a href="http://facebook.com" target="_blank" class="sociallink"><i class="icon-facebook"></i></a>
-			</div>
-			<div class="gplus">
-				<a href="http://plus.google.com" target="_blank" class="sociallink"><i class="icon-gplus"></i></a>
-			</div>
-			<div class="tw">
-				<a href="http://twitter.com" target="_blank" class="sociallink"><i class="icon-twitter"></i></a>			
-			</div>
-			<div style="clear:both;"></div>
-		</div>
-		<div style="clear: both;"></div>
-		
-		<div class="rectangle">2015 &copy; Jan Kowalski - Portfolio. Programista webowy zaprasza do współpracy! <i class="icon-mail-alt"></i> jan.kowalski@adres.com</div>
-	
-	</div>
-	
+
 </body>
 </html>
