Update to portfolio information

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+          <p class="lead">Mam na imię Michał. Jestem Absolwentem Wydziału Mechatroniki Politechniki Warszawskiej na specjalności Inżynieria Fotoniczna. Od paru lat...</p>
         </div>
         <div class="col-lg-4 mr-auto">
           <p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
@@ -300,12 +300,20 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/Goat.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Remake klasycznej gry River Ride. Gra była wykonana w ramach projektu na kursie Game Dev School. Wykonana została w silniku GODOT.</p>
-                <a class="Github" href="https://github.com/MichalGul/River_ride_remake" target="_blank"><i class="fa fa-external-link"></i>Zobacz na githubie <br></a>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <p class="mb-3">Przedstawiona gra została stworzona w ramach projektu na kursie Game Dev School. Przedmiotem projektu było wykonanie remake'u wybranej klasycznej gry arcadowej.</p> 
+                <p class="mb-3"> Do zadań zespołu, którego byłem głównym programistą, należało obmyślenie tematu przewodniego, utworzenie grafik, stworzenie animacji, obmyślenie design'u leveli oraz testowanie jakości produkcji.</p>
+                <P class="mb-3">Do moich zadań w trakcie tworzenia projektu należało:</P>
+                <ul class= 'list-group mb-3'>
+                  <li>Implementacja mechanik</li>
+                  <li>Umieszczenie assetów graficznych i dźwiękowych w grze</li>
+                  <li>Implementacja UI</li>
+                </ul>
+                <P class="mb-3">Projekt był wykonany w silniku GODOT w języku GDScript.</P>
+                <a class="Github mt-5" href="https://github.com/MichalGul/River_ride_remake" target="_blank"><i class="fa fa-external-link"></i>Zobacz na githubie<br></a>
+                <button class="btn btn-primary mt-5 mb-5" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Zamknij
-                </button>
+              </button>
               </div>
             </div>
           </div>
@@ -328,7 +336,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tasty Cake</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Pork Can Fly</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -342,10 +350,23 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/0EY_Rq48mEQ" frameborder="0"
                   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Gra typu endless runner na telefony z systemem Android</p>
+                <p class="mb-3">Przedstawiona gra została stworzona w ramach drugiego projektu na kursie Game Dev School. Przedmiotem projektu
+                  było wykonanie gry typu endless runner na urządzenia mobilne z systemem Android</p>
+                <p class="mb-3"> Do zadań zespołu, którego jednym z dwóch programistów, należało obmyślenie tematu przewodniego,
+                  utworzenie grafik, stworzenie animacji, obmyślenie design'u leveli i mechanik, testowanie jakości produkcji oraz umieszczenie gry na GooglePlay store</p>
+                <P class="mb-3">Do moich zadań w trakcie tworzenia projektu należało:</P>
+                <ul class='list-group mb-3'>
+                  <li>Implementacja mechanik</li>
+                  <li>Obsługa inputu</li>
+                  <li>Umieszczenie assetów graficznych i dźwiękowych w grze</li>
+                  <li>Implementacja UI</li>
+                  <li>Stworzenie podstawowego systemu zapisu</li>
+                </ul>
                 <a class="Github" href="https://play.google.com/store/apps/details?id=org.godotengine.porkcanfly" target="_blank"><i
                     class="fa fa-external-link"></i>Zobacz GooglePlay store<br></a>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <a class="Github" href="https://github.com/Agalatea/GDS2" target="_blank"><i
+                    class="fa fa-external-link"></i>Zobacz na githubie<br></a>
+                <button class="btn btn-primary mt-5" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
                 </button>
