Added third GDS project description

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+            <img class="img-fluid" src="img/przygodowka_menu.png" alt="">
           </div>
         </div>
 
@@ -347,6 +347,7 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <!--<img class="img-fluid rounded mb-5" src="img/portfolio/cake.png" alt=""> -->
+                                
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/0EY_Rq48mEQ" frameborder="0"
                   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <!-- Portfolio Modal - Text -->
@@ -392,7 +393,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Przygodówka</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -402,9 +403,26 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/circus.png" alt="">
+
+                <img class="img-fluid rounded mb-5" src="img/before_bar.png" alt="">
+
+                <a class="Github mb-5" href="https://www.youtube.com/watch?v=O9miIO6qtTc" target="_blank">
+                <i class="fa fa-external-link"></i>Zobacz na youtube<br></a>
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-3"> <br> Przedstawiona gra została stworzona w ramach trzeciego projektu na kursie Game Dev School. Przedmiotem
+                  projektu
+                  było wykonanie gry przygodowej na platforme PC</p>
+                <p class="mb-3"> Do zadań zespołu, którego jednym z dwóch programistów, należało: przedstawienie historii,
+                  utworzenie grafik, stworzenie animacji, stworzenie dialogów, implementacja interakcji z przedmiotami, testowanie jakości produkcji.
+                  Projekt był jedną z części całej historii jaką mieli przedstawić kursanci.</p>
+                <P class="mb-3">Do moich zadań w trakcie tworzenia projektu należało:</P>
+                <ul class='list-group mb-3'>
+                  <li>Implementacja mechanik interakcji</li>
+                  <li>Obsługa inputu</li>
+                  <li>Umieszczenie assetów graficznych i dźwiękowych w grze</li>
+                  <li>Implementacja UI</li>
+                  <li>Stworzenie systemu poruszania się</li>
+                </ul>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
