--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Mam na imię Michał. Jestem Absolwentem Wydziału Mechatroniki Politechniki Warszawskiej na specjalności Inżynieria Fotoniczna. Od paru lat...</p>
+          <p class="lead">Mam na imię Michał....</p>
         </div>
         <div class="col-lg-4 mr-auto">
           <p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
