Finisht 3D Shooter description

--- a/index.html
+++ b/index.html
@@ -493,7 +493,18 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/Dead.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"> Pierwsza gra zrobiona kilka lat temu.</p>
+                <p class="mb-3"> Przedstawiona gra jest jedną z pierwszych gier jakies stworzyłem podczas swojej nauki silnika Unity.
+                  Jest to prosta strzelanka typu endless, w której zadaniem gracza jest wytrwać jak najdłużej. W ramach tego samodzielnego projektu należało stworzyć:
+                </p>
+                <ul class='list-group mb-2'>
+                  <li>System pojawiania się wrogów</li>
+                  <li>Podstawowy system sterowania z animacjami (Graczem i przeciwnikami)</li>
+                  <li>System ulepszeń (Power Ups)</li>
+                  <li>Menu oraz UI</li>
+                  <li>System Punktacji</li>
+                </ul>
+                <a class="Github mt-5" href="https://github.com/MichalGul/3D-Shooter-Survival-Game" target="_blank"><i
+                    class="fa fa-external-link"></i>Zobacz na githubie<br><br></a>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
