Minor description changes, and hide steam Odyssey, fixed contact href

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
 
         <!-- Portfolio Item 5 -->
-        <div class="col-md-6 col-lg-4">
+        <div hidden class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -193,19 +193,15 @@
           <p class="lead text-justify">Jestem absolwentem studiów magisterskich i inżynierskich na kierunku Mechatronika
             na Wydziale Mechatroniki Politechniki Warszawskiej na specjalności Inżynieria Fotoniczna. Moje pierwsze
             doświadczenia zawodowe polegają na tworzeniu i rozwijaniu algorytmów analizy danych, uczenia maszynowego
-            oraz przetwarzania obrazów w języku Python. Mimo podjęcia pracy związanej z wybranymi studiami, nie
-            zaprzestałem poszukiwań drogi kariery, jaką chciałbym podążać. Mówi się, że wybierając swoją drogę kariery
-            należy cofnąć się do wieku dziecięcego i tam szukać pasji. Dla mnie zawsze taką pasją były gry komputerowe.
+            oraz przetwarzania obrazów w języku Python. Obecnie pracuje jako Full Stack Developer w firmie produkującej
+            systemu kontroli jakości do przemysłu.
           </p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead text-justify">W dorosłym życiu chcę jednak nie tylko pokonywać kolejne levele, ale również
-            zagłębić się w proces ich powstawania i tchnąć życie w postaci, z którymi młode osoby, takie jak ja 15 lat
-            temu, będą mogły dzieć swój wolny czas. Chcę uczestniczyć w procesie tworzenia światów, pomagających
-            przetrwać zarówno pierwsze burze zatapiających się w nich nastolatków, ale też dać chwile wytchnienia
-            dorosłym, przytłoczonym codziennymi obowiązkami. Bo tym właśnie są dla mnie gry video. Nie głupią rozrywką i
-            pożeraczem czasu, a sposobem na rozwój oraz zachowanie balansu pomiędzy dorosłym, a schowanym gdzieś w
-            środku każdego z nas dzieckiem.</p>
+          <p class="lead text-justify">
+            Na poniższej stronie zamieszczam projekty nad którymi pracowałem w wolnym czasie. Są to niewielkie gry stworzone
+            za pomocą silnika Unity oraz Godot.
+          </p>
         </div>
       </div>
 
@@ -226,7 +222,7 @@
   </section> -->
 
   <!-- Footer -->
-  <footer class="footer text-center">
+  <footer class="footer text-center" id="contact">
     <div class="container">
       <div class="row">
 
@@ -239,7 +235,7 @@
         -->
 
         <!-- Footer Social Icons -->
-        <div class="col-lg-6 mb-5 mb-lg-0" style="margin-right: -15px; margin-left: -15px;"">
+        <div class="col-lg-6 mb-5 mb-lg-0" style="margin-right: -15px; margin-left: -15px;">
           <h4 class=" text-uppercase mb-4">Around the Web</h4>
           <!-- 
           <a class="btn btn-outline-light btn-social mx-1" href="#">
